# checksmix

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  MMIX.md  README.md  big_fib.mms  mmixdb-plan.md
.github/: dependabot.yml
.github/workflows/: deploy-crate.yml  smoke-test.yml
contrib/: mmixdb.el
example/: example_full.mmix
examples/: all_instructions_test.mms  example.mix  exit_code.mms  fibonacci.mms  function.mms  hello_world.mms  linked_list.mms  remeuclid.mms  time.mms
man/: checksmix.1  mmixasm.1
src/: debugger.rs  encode.rs  lib.rs  mix.rs  mmix.rs  mmixal.pest  mmixal.rs  mmo.rs
tests/: cli_subcommands.rs  docs_consistency.rs  include_directive.rs  mmix_trap_file_io.rs  multi_source.rs
tests/fixtures/: dup_global_a.mms  dup_global_b.mms  hello.mms  include_bad_lib.mms  include_lib.mms  include_main.mms  multi_lib.mms  multi_main.mms  undef_ref.mms
